# Newgrounds-GD-Browser

./: .gitignore  CMakeLists.txt  README.md  about.md  changelog.md  mod.json
bindings/bindings/Geode/: CodegenData.json  GeneratedBinding.hpp  GeneratedModify.hpp  GeneratedPredeclare.hpp  GeneratedSource.cpp
bindings/bindings/Geode/binding/: AchievementCell.hpp  AnimatedGameObject.hpp  BrowseSmartKeyLayer.hpp  BrowseSmartTemplateLayer.hpp  ButtonSprite.hpp  CCAnimateFrameCache.hpp  CCBlockLayer.hpp  CCSpriteWithHue.hpp  CCTextInputNode.hpp  ChallengesPage.hpp  ChanceTriggerGameObject.hpp  CheckpointObject.hpp  ColorSelectPopup.hpp  CommentCell.hpp  CreateMenuItem.hpp  CreateParticlePopup.hpp  CustomSongLayer.hpp  CustomizeObjectLayer.hpp  DialogObject.hpp  DrawGridLayer.hpp  EditButtonBar.hpp  EditLevelLayer.hpp  EditTriggersPopup.hpp  EditorPauseLayer.hpp  EditorUI.hpp  EffectGameObject.hpp  EndLevelLayer.hpp  EnhancedGameObject.hpp  FMODAudioEngine.hpp  FMODAudioState.hpp  FriendsProfilePage.hpp  GJBaseGameLayer.hpp  GJEffectManager.hpp  GJGarageLayer.hpp  GJGroundLayer.hpp  GJMGLayer.hpp  GJOptionsLayer.hpp  GJPathSprite.hpp  GJRewardObject.hpp  GJScaleControl.hpp  (+69 more)
bindings/bindings/Geode/modify/: AnimatedGameObject.hpp  BrowseSmartKeyLayer.hpp  BrowseSmartTemplateLayer.hpp  CCActionInstant.hpp  CCActionInterval.hpp  CCAnimateFrameCache.hpp  CCBlockLayer.hpp  CCLabelTTF.hpp  CCScene.hpp  CCSkewTo.hpp  CCSpriteBatchNode.hpp  CCSpriteWithHue.hpp  ChallengesPage.hpp  ChanceTriggerGameObject.hpp  CommentCell.hpp  (+54 more)
src/: htmlHelper.cpp  htmlHelper.hpp  main.cpp
